--- a/usr/lib/sparky-aptus-appcenter/net-email.html
+++ b/usr/lib/sparky-aptus-appcenter/net-email.html
@@ -34,65 +34,65 @@ Last update: Dec 6, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://alpine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_alpine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://alpine"><b>Alpine</b><br /><span><script>dict.print('web', 'alpine');</script></span></a>
+		<td><a href="aptus://app_alpine"><b>Alpine</b><br /><span><script>dict.print('web', 'alpine');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://claws-mail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/claws-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_claws-mail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/claws-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://claws-mail"><b>Claws-Mail</b><br /><span><script>dict.print('web', 'clawsmail');</script></span></a>
+		<td><a href="aptus://app_claws-mail"><b>Claws-Mail</b><br /><span><script>dict.print('web', 'clawsmail');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://evolution"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/evolution.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_evolution"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/evolution.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://evolution"><b>Evolution</b><br /><span><script>dict.print('web', 'evolution');</script></span></a>
+		<td><a href="aptus://app_evolution"><b>Evolution</b><br /><span><script>dict.print('web', 'evolution');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://geary"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/geary.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_geary"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/geary.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://geary"><b>Geary</b><br /><span><script>dict.print('web', 'geary');</script></span></a>
+		<td><a href="aptus://app_geary"><b>Geary</b><br /><span><script>dict.print('web', 'geary');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://kmail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/kmail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_kmail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/kmail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://kmail"><b>KMail</b><br /><span><script>dict.print('web', 'kmail');</script></span></a>
+		<td><a href="aptus://app_kmail"><b>KMail</b><br /><span><script>dict.print('web', 'kmail');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://mutt"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_mutt"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://mutt"><b>Mutt</b><br /><span><script>dict.print('web', 'mutt');</script></span></a>
+		<td><a href="aptus://app_mutt"><b>Mutt</b><br /><span><script>dict.print('web', 'mutt');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://sylpheed"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/sylpheed.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_sylpheed"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/sylpheed.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://sylpheed"><b>Sylpheed</b><br /><span><script>dict.print('web', 'sylpheed');</script></span></a>
+		<td><a href="aptus://app_sylpheed"><b>Sylpheed</b><br /><span><script>dict.print('web', 'sylpheed');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://thunderbird"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/thunderbird.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_thunderbird"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/thunderbird.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://thunderbird"><b>Thunderbird</b><br /><span><script>dict.print('web', 'thunderbird');</script></span></a>
+		<td><a href="aptus://app_thunderbird"><b>Thunderbird</b><br /><span><script>dict.print('web', 'thunderbird');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://trojita"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_trojita"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/e-mail.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://trojita"><b>Trojita</b><br /><span><script>dict.print('web', 'trojita');</script></span></a>
+		<td><a href="aptus://app_trojita"><b>Trojita</b><br /><span><script>dict.print('web', 'trojita');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
