--- a/usr/lib/sparky-aptus-appcenter/net-filetransfer.html
+++ b/usr/lib/sparky-aptus-appcenter/net-filetransfer.html
@@ -34,79 +34,79 @@ Last update: Dec 7, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://aria2"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_aria2"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://aria2"><b>Aria2</b><br /><span><script>dict.print('web', 'aria2');</script></span></a>
+		<td><a href="aptus://app_aria2"><b>Aria2</b><br /><span><script>dict.print('web', 'aria2');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://filezilla"><img src="images/filezilla.png" class="appicon"><br /></a>
+		<td><a href="aptus://app_filezilla"><img src="images/filezilla.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://filezilla"><b>FileZilla</b><br /><span><script>dict.print('web', 'filezilla');</script></span></a>
+		<td><a href="aptus://app_filezilla"><b>FileZilla</b><br /><span><script>dict.print('web', 'filezilla');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://gftp"><img src="images/gftp.png" class="appicon"><br /></a>
+		<td><a href="aptus://app_gftp"><img src="images/gftp.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://gftp-gtk"><b>gFTP</b><br /><span><script>dict.print('web', 'gftp');</script></span></a>
+		<td><a href="aptus://app_gftp-gtk"><b>gFTP</b><br /><span><script>dict.print('web', 'gftp');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://jftp"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_jftp"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://jftp"><b>JFtp</b><br /><span><script>dict.print('web', 'jftp');</script></span></a>
+		<td><a href="aptus://app_jftp"><b>JFtp</b><br /><span><script>dict.print('web', 'jftp');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://kget"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/kget.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_kget"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/kget.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://kget"><b>KGet</b><br /><span><script>dict.print('web', 'kget');</script></span></a>
+		<td><a href="aptus://app_kget"><b>KGet</b><br /><span><script>dict.print('web', 'kget');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://lftp"><img src="images/lftp.png" class="appicon"><br /></a>
+		<td><a href="aptus://app_lftp"><img src="images/lftp.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://lftp"><b>LFTP</b><br /><span><script>dict.print('web', 'lftp');</script></span></a>
+		<td><a href="aptus://app_lftp"><b>LFTP</b><br /><span><script>dict.print('web', 'lftp');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://ncftp"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_ncftp"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://ncftp"><b>NcFTP</b><br /><span><script>dict.print('web', 'ncftp');</script></span></a>
+		<td><a href="aptus://app_ncftp"><b>NcFTP</b><br /><span><script>dict.print('web', 'ncftp');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://uftp"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_uftp"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://uftp"><b>UFTP</b><br /><span><script>dict.print('web', 'uftp');</script></span></a>
+		<td><a href="aptus://app_uftp"><b>UFTP</b><br /><span><script>dict.print('web', 'uftp');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://uget"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/uget.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_uget"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/uget.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://uget"><b>uGet</b><br /><span><script>dict.print('web', 'uget');</script></span></a>
+		<td><a href="aptus://app_uget"><b>uGet</b><br /><span><script>dict.print('web', 'uget');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://wget"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_wget"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://wget"><b>Wget</b><br /><span><script>dict.print('web', 'wget');</script></span></a>
+		<td><a href="aptus://app_wget"><b>Wget</b><br /><span><script>dict.print('web', 'wget');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://youtube-dlg"><img src="images/youtube-dlg.png" class="appicon"><br /></a>
+		<td><a href="aptus://app_youtube-dlg"><img src="images/youtube-dlg.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://youtube-dlg"><b>Youtube-DLG</b><br /><span><script>dict.print('web', 'youtubedlg');</script></span></a>
+		<td><a href="aptus://app_youtube-dlg"><b>Youtube-DLG</b><br /><span><script>dict.print('web', 'youtubedlg');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
