--- a/usr/lib/sparky-aptus-appcenter/net-others.html
+++ b/usr/lib/sparky-aptus-appcenter/net-others.html
@@ -34,38 +34,38 @@ Last update: Dec 3, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://dropbox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/dropbox.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_dropbox"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/dropbox.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://dropbox"><b>Dropbox</b><br /><span><script>dict.print('web', 'dropbox');</script></span></a>
+		<td><a href="aptus://app_dropbox"><b>Dropbox</b><br /><span><script>dict.print('web', 'dropbox');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://google-earth-pro-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-earth.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_google-earth-pro-stable"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/google-earth.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://google-earth-pro-stable"><b>Google Earth</b><br /><span><script>dict.print('web', 'googleearth');</script></span></a>
+		<td><a href="aptus://app_google-earth-pro-stable"><b>Google Earth</b><br /><span><script>dict.print('web', 'googleearth');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://megasync"><img src="images/mega.png" class="appicon"><br /></a>
+		<td><a href="aptus://app_megasync"><img src="images/mega.png" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://megasync"><b>MegaSync</b><br /><span><script>dict.print('web', 'megasync');</script></span></a>
+		<td><a href="aptus://app_megasync"><b>MegaSync</b><br /><span><script>dict.print('web', 'megasync');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://spideroakone"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/spideroak.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_spideroakone"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/spideroak.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://spideroakone"><b>SpiderOakONE</b><br /><span><script>dict.print('web', 'spideroakone');</script></span></a>
+		<td><a href="aptus://app_spideroakone"><b>SpiderOakONE</b><br /><span><script>dict.print('web', 'spideroakone');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	
 	<tr>
-		<td><a href="aptus://"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://"><b>G</b><br /><span><script>dict.print('web', '');</script></span></a>
+		<td><a href="aptus://app_"><b>G</b><br /><span><script>dict.print('web', '');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
