--- a/usr/lib/sparky-aptus-appcenter/net-rss.html
+++ b/usr/lib/sparky-aptus-appcenter/net-rss.html
@@ -34,51 +34,51 @@ Last update: Dec 8, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://akregator"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/akregator.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_akregator"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/akregator.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://akregator"><b>Akregator</b><br /><span><script>dict.print('web', 'akregator');</script></span></a>
+		<td><a href="aptus://app_akregator"><b>Akregator</b><br /><span><script>dict.print('web', 'akregator');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://liferea"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/liferea.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_liferea"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/liferea.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://liferea"><b>Liferea</b><br /><span><script>dict.print('web', 'liferea');</script></span></a>
+		<td><a href="aptus://app_liferea"><b>Liferea</b><br /><span><script>dict.print('web', 'liferea');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://quiterss"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_quiterss"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://quiterss"><b>Quiterss</b><br /><span><script>dict.print('web', 'quiterss');</script></span></a>
+		<td><a href="aptus://app_quiterss"><b>Quiterss</b><br /><span><script>dict.print('web', 'quiterss');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://rawdog"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_rawdog"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://rawdog"><b>Rawdog</b><br /><span><script>dict.print('web', 'rawdog');</script></span></a>
+		<td><a href="aptus://app_rawdog"><b>Rawdog</b><br /><span><script>dict.print('web', 'rawdog');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://rssguard"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_rssguard"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://rssguard"><b>RSS Guard</b><br /><span><script>dict.print('web', 'rssguard');</script></span></a>
+		<td><a href="aptus://app_rssguard"><b>RSS Guard</b><br /><span><script>dict.print('web', 'rssguard');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://rsstail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_rsstail"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://rsstail"><b>RSSTail</b><br /><span><script>dict.print('web', 'rsstail');</script></span></a>
+		<td><a href="aptus://app_rsstail"><b>RSSTail</b><br /><span><script>dict.print('web', 'rsstail');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://tickr"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_tickr"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/rss.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://tickr"><b>Tickr</b><br /><span><script>dict.print('web', 'tickr');</script></span></a>
+		<td><a href="aptus://app_tickr"><b>Tickr</b><br /><span><script>dict.print('web', 'tickr');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
