--- a/usr/lib/sparky-aptus-appcenter/office.html
+++ b/usr/lib/sparky-aptus-appcenter/office.html
@@ -40,24 +40,23 @@ Last update: Dec 2, 2018 by pavroo
 		</td>
 		<td><a href="office-calculator.html" class="button"><span><script>dict.print('main', 'calculators');</script></span></a>
 		</td>
-		<td><a href="office-comix.html" class="button"><span><script>dict.print('main', 'comix');</script></span></a>
+		<td><a href="office-document.html" class="button"><span><script>dict.print('main', 'documentviewers');</script></span></a>
 		</td>
 	</tr>
 	<tr>
 		<td><a href="office-html.html" class="button"><span><script>dict.print('main', 'htmleditors');</script></span></a>
 		</td>
 		<td><a href="office-officesuite.html" class="button"><span><script>dict.print('main', 'officesuite');</script></span></a>
-		</td>
-		<td><a href="office-pdf.html" class="button"><span><script>dict.print('main', 'pdf');</script></span></a>
-		</td>
-	</tr>
-	<tr>
-		
+		</td>		
 		<td><a href="office-spreedsheet.html" class="button"><span><script>dict.print('main', 'spreedsheet');</script></span></a>
 		</td>
+		</tr>
+	<tr>
 		<td><a href="office-text.html" class="button"><span><script>dict.print('main', 'texteditors');</script></span></a>
 		</td>
 		<td><a href="office-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
+		</td>
+		<td>
 		</td>
 	</tr>
 </tbody>
