--- a/usr/lib/sparky-aptus-appcenter/net-p2p.html
+++ b/usr/lib/sparky-aptus-appcenter/net-p2p.html
@@ -34,93 +34,93 @@ Last update: Dec 7, 2018 by pavroo
 <div class="column5">
 <tbody>
 	<tr>
-		<td><a href="aptus://amule"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/amule.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_amule"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/amule.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://amule"><b>aMule</b><br /><span><script>dict.print('web', 'amule');</script></span></a>
+		<td><a href="aptus://app_amule"><b>aMule</b><br /><span><script>dict.print('web', 'amule');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://bitstormlite"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_bitstormlite"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://bitstormlite"><b>BitStormLite</b><br /><span><script>dict.print('web', 'bitstormlite');</script></span></a>
+		<td><a href="aptus://app_bitstormlite"><b>BitStormLite</b><br /><span><script>dict.print('web', 'bitstormlite');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://bittornadu-gui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_bittornadu-gui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://bittornado-gui"><b>BitTornado-GUI</b><br /><span><script>dict.print('web', 'bittornadogui');</script></span></a>
+		<td><a href="aptus://app_bittornado-gui"><b>BitTornado-GUI</b><br /><span><script>dict.print('web', 'bittornadogui');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://ctorrnet"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_ctorrnet"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://ctorrent"><b>CTorrent</b><br /><span><script>dict.print('web', 'ctorrent');</script></span></a>
+		<td><a href="aptus://app_ctorrent"><b>CTorrent</b><br /><span><script>dict.print('web', 'ctorrent');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://deluge"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/deluge.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_deluge"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/deluge.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://deluge"><b>Deluge</b><br /><span><script>dict.print('web', 'deluge');</script></span></a>
+		<td><a href="aptus://app_deluge"><b>Deluge</b><br /><span><script>dict.print('web', 'deluge');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://gtk-gnutella"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnutella.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_gtk-gnutella"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/gnutella.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://gtk-gnutella"><b>GTK-Gnutella</b><br /><span><script>dict.print('web', 'gtkgnutella');</script></span></a>
+		<td><a href="aptus://app_gtk-gnutella"><b>GTK-Gnutella</b><br /><span><script>dict.print('web', 'gtkgnutella');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://ktorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/ktorrent.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_ktorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/ktorrent.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://ktorrent"><b>KTorrent</b><br /><span><script>dict.print('web', 'ktorrent');</script></span></a>
+		<td><a href="aptus://app_ktorrent"><b>KTorrent</b><br /><span><script>dict.print('web', 'ktorrent');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://mldonkey-gui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_mldonkey-gui"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://mldonkey-gui"><b>MLDonkey-GUI</b><br /><span><script>dict.print('web', 'mldonkeygui');</script></span></a>
+		<td><a href="aptus://app_mldonkey-gui"><b>MLDonkey-GUI</b><br /><span><script>dict.print('web', 'mldonkeygui');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://nicotine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_nicotine"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://nicotine"><b>Nicotine</b><br /><span><script>dict.print('web', 'nicotine');</script></span></a>
+		<td><a href="aptus://app_nicotine"><b>Nicotine</b><br /><span><script>dict.print('web', 'nicotine');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://qbittorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/qbittorrent.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_qbittorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/qbittorrent.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://qbittorrent"><b>qBittorrent</b><br /><span><script>dict.print('web', 'qbittorrent');</script></span></a>
+		<td><a href="aptus://app_qbittorrent"><b>qBittorrent</b><br /><span><script>dict.print('web', 'qbittorrent');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://rtorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_rtorrent"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/download.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://rtorrent"><b>rtorrent</b><br /><span><script>dict.print('web', 'rtorrent');</script></span></a>
+		<td><a href="aptus://app_rtorrent"><b>rtorrent</b><br /><span><script>dict.print('web', 'rtorrent');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://transmission"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/transmission.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_transmission"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/transmission.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://transmission"><b>Transmission</b><br /><span><script>dict.print('web', 'transmission');</script></span></a>
+		<td><a href="aptus://app_transmission"><b>Transmission</b><br /><span><script>dict.print('web', 'transmission');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://vuze"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/Azureus.svg" class="appicon"><br /></a>
+		<td><a href="aptus://app_vuze"><img src="/usr/share/icons/ultra-flat-icons/apps/scalable/Azureus.svg" class="appicon"><br /></a>
 		</td>
-		<td><a href="aptus://vuze"><b>Vuze</b><br /><span><script>dict.print('web', 'vuze');</script></span></a>
+		<td><a href="aptus://app_vuze"><b>Vuze</b><br /><span><script>dict.print('web', 'vuze');</script></span></a>
 		<br />&nbsp;
 		</td>
 	</tr>
