--- a/usr/lib/sparky-aptus-appcenter/multimedia.html
+++ b/usr/lib/sparky-aptus-appcenter/multimedia.html
@@ -36,14 +36,18 @@ Last update: Dec 2, 2018 by pavroo
 <div class="column3">
 <tbody>
 	<tr>
-		<td><a href="media-audio.html" class="button"><span><script>dict.print('main', 'audio');</script></span></a>
+		<td><a href="media-audioeditors.html" class="button"><span><script>dict.print('main', 'audioeditors');</script></span></a>
+		</td>
+		<td><a href="media-audioplayers.html" class="button"><span><script>dict.print('main', 'audioplayers');</script></span></a>
 		</td>
 		<td><a href="media-codecs.html" class="button"><span><script>dict.print('main', 'codecs');</script></span></a>
 		</td>
-		<td><a href="media-video.html" class="button"><span><script>dict.print('main', 'video');</script></span></a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="media-videoeditors.html" class="button"><span><script>dict.print('main', 'videoeditors');</script></span></a>
+		</td>
+		<td><a href="media-videoplayers.html" class="button"><span><script>dict.print('main', 'videoplayers');</script></span></a>
+		</td>
 		<td><a href="media-other.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
 		</td>
 		<td>
